--- a/style.css
+++ b/style.css
@@ -9,18 +9,17 @@ body
   color: #ffffff;
 }
 
-/* .container
+.container
 {
-
   margin: 10px auto;
   width: 800px;
   height: auto;
   border:2px solid white;
-} */
+}
 
-h2
+.container h2
 {
   padding-bottom: 5px;
-
+  display: inline-block;
   margin-right: 5px;
 }
