--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body
   margin: 10px auto;
   width: 802px;
   height: auto;
-  border:2px solid white;
 }
 
 .container h2
@@ -22,4 +21,9 @@ body
   padding-bottom: 5px;
   display: inline-block;
   margin-right: 5px;
+}
+
+#canvas
+{
+  border: 2px solid white;
 }
