--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
+
 *
 {
   margin:0;
   padding: 0;
 }
+:root
+{
+  --bodycolor:#57ff24;
+}
 body
 {
   background-color: #000000;
-  color: #ffffff;
+  color: var(--bodycolor);
 }
 
 .container
@@ -23,8 +28,26 @@ body
   margin-right: 5px;
 }
 
-#canvas
+.button
 {
-  border: 2px solid white;
-  
+  width: 30px;
+  height: 30px;
+  margin-top: 10px 30px;
+  display: inline-block;
+}
+.color1
+{
+  background-color: white;
+}
+.color2
+{
+  background-color:#08d9d6;
+}
+.color3
+{
+  background-color:#ff2e63;
+}
+.color4
+{
+  background-color: #57ff24;
 }
